@@ -536,3 +536,9 @@ UPDATE system_settings SET db_schema_version='1523',db_schema_update_date=NOW() 
 
 ALTER TABLE system_settings ADD allow_phonebook ENUM('0','1') default '0';
 UPDATE system_settings SET db_schema_version='1524',db_schema_update_date=NOW() where db_schema_version < 1524;
+
+ALTER TABLE `vicidial_agent_log` ADD INDEX `uniqueid` (`uniqueid`);
+ALTER TABLE `WallBoardData` ADD INDEX `uniqueid` (`uniqueid`);
+ALTER TABLE `WallBoardData_archive` ADD INDEX `uniqueid` (`uniqueid`);
+
+UPDATE system_settings SET db_schema_version='1525',db_schema_update_date=NOW() where db_schema_version < 1525;
